--- a/style.css
+++ b/style.css
@@ -50,6 +50,6 @@ table {
 
           h5 {
             font-size:20px;
-            color:Brown ;
+            color:Blac ;
             
             }
